# Bandify

./: README.md  test_commit.txt
.github/workflows/: build_test_react.yml  ci_frontend.yaml  deploy_all.yaml  frontend_deploy.yaml  sam_deploy.yaml
backend/: .gitignore  __init__.py  requirements.txt
backend/infrastructure/: .gitignore  pyproject.toml  requirements.txt  samconfig.toml  template-playwright.yaml  template-searchresults.yaml  template.yaml
backend/infrastructure/.aws-sam/: build.toml
backend/infrastructure/playwright_function/: app.py  pyproject.toml  requirements.txt
backend/infrastructure/playwright_function/search/: __init__.py  beatport_search.py  currency_converter.py
backend/infrastructure/sam-app/: pyproject.toml  requirements.txt  samconfig.toml  template.yaml
backend/infrastructure/sam-app/search_results/: app.py  db.py  pyproject.toml  requirements.txt  search.py
backend/infrastructure/search_results/: app.py  db.py  requirements.txt  search_tracks.py
backend/infrastructure/search_results/charset_normalizer-3.4.2.dist-info/: RECORD
backend/infrastructure/search_results/playwright-1.54.0.dist-info/: RECORD
backend/infrastructure/search_results/search/: __init__.py  itunes_search.py
backend/playlists/: bandcamp_search_routes.py  beatport_search_routes.py  engine.py  itunes_search_routes.py  playlists.py  server.py
backend/search/: __init__.py  bandcamp_search.py  beatport_search.py  currency_converter.py  itunes_search.py
cypress/e2e/: homeAndLogin.js  mockBackend.cy.js
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/Header/: Header.module.css  Header.tsx
frontend/src/components/HeroBox/: HeroBox.module.css  HeroBox.tsx  HeroLoggedIn.tsx  HeroLoginCard.tsx  HeroWelcome.tsx
frontend/src/components/LoadingAnimation/: LoadingRipple.tsx
frontend/src/components/Login/: Login.tsx
frontend/src/components/Main/: Main.module.css  Main.tsx
frontend/src/components/ParticlesBackground/: ParticlesBackground.tsx
frontend/src/components/PlaylistSort/: PlaylistSort.tsx
frontend/src/components/PlaylistTable/: PlaylistTable.module.css  PlaylistTable.tsx
frontend/src/components/Spheres/: Sphere.tsx  SpheresBackground.tsx
frontend/src/components/Welcome/: Welcome.module.css  Welcome.tsx
frontend/src/types/: types.ts
