[tool.poetry]
name = "search-results"
version = "0.1.0"
description = ""
authors = ["AustinMH0 <austinmhendricks@gmail.com>"]

packages = [
  { include = "search_results" },
  { include = "search" }
]

[tool.poetry.dependencies]
python = "^3.11"
playwright = ">=1.52.0,<2.0.0"
psycopg2-binary = "^2.9.10"
aws-psycopg2 = "^1.3.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
