[tool.poetry]
name = "groovonomy-backend" 
version = "0.1.0"
description = "Groovonomy backend Lambdas: Playwright & SearchResults"
authors = ["AustinMH0 <austinmhendricks@gmail.com>"]

packages = [
  { include = "playwright_function" },
  { include = "search_results" },
  { include = "search" }
]

[tool.poetry.dependencies]
python = "^3.11"

# Common/shared dependencies across all Lambdas
typing-extensions = "4.14.1"
aws-psycopg2 = "1.3.8"
fake-useragent = "2.2.0"
idna = "3.10"
psycopg2-binary = "2.9.10"
requests = "2.32.3"
sqlalchemy = "2.0.31" 

# Playwright-specific dependencies
[tool.poetry.group.playwright.dependencies]
playwright = "1.54.0"
pyee = "13.0.0"
beautifulsoup4 = "4.12.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
