[tool.poetry]
name = "search-results"
version = "0.1.0"
description = ""
authors = ["AustinMH0 <austinmhendricks@gmail.com>"]

packages = [
  { include = "search_results" },
  { include = "search" }
]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "2.0.36"
requests = "2.32.3"
aws-psycopg2 = "1.3.8"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.playwright.dependencies]
Flask = "3.1.0"
playwright = "1.54.0"
pyee = "13.0.0"
beautifulsoup4 = "4.12.3"
requests = "2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
